# sdmckt

./: .gitignore  COPYING  ChangeLog  INSTALL  Makefile.am  README  autoclean.sh  autogen.sh  configure.ac
doc/: FORMAT  future-plans.txt  shamirs.original.comments.c
include/sdmckt0/: auth.h  oracle_yubikey.h  secret.h  shamirs.h  util.h
src/: auth.c  oracle_yubikey.c  sdmckt.c  secret.c  shamirs.c  shamirs_constants.h  test-sdmckt.c  util.c  ykchalresp.c
src/scrypt/crypto/: crypto_scrypt-nosse.c  crypto_scrypt-ref.c  crypto_scrypt-sse.c
